[tool.poetry]
name = "hexlet-python-first-project"
version = "0.1.0"
description = "The first of four educating projects of the 'Profession: Python Developer' course on Hexlet.io"
authors = ["Ilya Dutlov <id@dutlov.ru>"]
repository = "https://github.com/dutlov/python-project-lvl1"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = 'brain_games.games.brain_calc:main'
brain-gcd = 'brain_games.games.brain_gcd:main'
brain-progression = 'brain_games.games.brain_progression:main'
brain-prime = 'brain_games.games.brain_prime:main'