[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The first of four educating projects of the 'Profession: Python Developer' course on Hexlet.io"
authors = ["Ilya Dutlov <id@dutlov.ru>"]
repository = "https://github.com/dutlov/python-project-lvl1"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even_script:main"
brain-calc = 'brain_games.scripts.brain_calc_script:main'
brain-gcd = 'brain_games.scripts.brain_gcd_script:main'
brain-progression = 'brain_games.scripts.brain_progression_script:main'
brain-prime = 'brain_games.scripts.brain_prime_script:main'